Add egui interface

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,39 @@
 [package]
 name = "buttress"
 version = "0.1.0"
+authors = ["https://github.com/NocturnalBoi"]
 edition = "2021"
 
 [dependencies]
+egui = "0.27.0"
+eframe = { version = "0.27.0", default-features = false, features = [
+    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
+    "default_fonts", # Embed the default egui fonts.
+    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
+    "persistence",   # Enable restoring app state when restarting the app.
+] }
+log = "0.4"
 rand = "0.8.4"
 clap = { version = "4.0", features = ["derive"] }
+
+# App persistence is not required, but without this app doesn't compile:
+serde = { version = "1", features = ["derive"] }
+
+# native:
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+env_logger = "0.10"
+
+# web:
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen-futures = "0.4"
+
+
+[profile.release]
+opt-level = 2 # fast and small wasm
+
+# Optimize all dependencies even in debug builds:
+[profile.dev.package."*"]
+opt-level = 2
+
 
 [dev-dependencies]
